# offsides

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/blocklet/: Cargo.toml  build.rs
examples/blocklet/examples/: sample.blocklet
examples/blocklet/src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  tests.rs
src/: column.rs  layout.rs  lexer.rs  lib.rs  stack.rs
tests/: modes.rs  prism.rs
